--- a/css/layout.css
+++ b/css/layout.css
@@ -825,8 +825,10 @@ call-to-action .button {
    margin-bottom: 6px;
 }
 #contact p.lead {
-   font: 18px/36px 'opensans-light', sans-serif;
+   font: 24px/36px 'opensans-bold', sans-serif;
+   color: #FFFFFF;
    padding-right: 3%;
+   padding-top: 3%;
 }
 #contact .header-col { padding-top: 6px; }
 
