--- a/css/layout.css
+++ b/css/layout.css
@@ -546,6 +546,7 @@ ul#nav li.current a {
    padding: 18px 36px;
    background: #111;
    text-align: left;
+   height: 60px;
 }
 .popup-modal .link-box a {
    color: #fff;
@@ -553,9 +554,10 @@ ul#nav li.current a {
 	text-transform: uppercase;
    letter-spacing: 3px;
    cursor: pointer;
+   float: left;
 }
-.popup-modal a:hover {	color: #00CCCC; }
-.popup-modal a.popup-modal-dismiss { margin-left: 24px; }
+.popup-modal a:hover {	color: #6991FF; }
+.popup-modal a.popup-modal-dismiss { float: right; }
 
 
 /* fadein/fadeout effect for modal popup
