--- a/css/layout.css
+++ b/css/layout.css
@@ -140,7 +140,7 @@ header .scrolldown a:hover { color: #6991FF; }
    left: 0;
    top: 0;
 }
-.opaque { background-color: #333; }
+.opaque { background-color: #6991FF; }
 
 /* hide toggle button */
 #nav-wrap > a.mobile-btn { display: none; }
@@ -978,7 +978,7 @@ footer .social-links li {
     margin: 0;
     padding: 0;
     margin-left: 42px;
-    color: #F06000;
+    color: #6991FF;
 }
 
 footer .social-links li:first-child { margin-left: 0; }
